[fix] styled select options visibility on FF

--- a/odoo/local-src/theme_fluxdocs/static/less/style.less
+++ b/odoo/local-src/theme_fluxdocs/static/less/style.less
@@ -156,7 +156,8 @@ body #wrapwrap{ //Outside of wrapwrap is the backend
 			option{
 				height: 42px;
 				padding-top: 10px;
-				color: @darkColor;
+				color: white;
+				background-color: @darkColor;
 			}
 		}
 		select[name="country_id"] {
